# genos

./: .clang-format  .gitignore  .gitmodules  Dockerfile  LINKS.md  README.md  TODO  bonesinger.yml  genos.g.py  genos.gjs  genos.gll  glib.gll  make.py  patch.yml  runtests  scat.txt
ModbusRemoteControl/: .gitignore  .gitmodules  CMakeLists.txt  ModbusHMI.cpp  ModbusHMI.h  kinco_sz7s.h  main.cpp  main.h  make.py  scpi.cpp  scpi.h
ModbusRemoteControl/tools/: install.sh
arch/: README.md  (+1 more)
crow/: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  azure-pipelines.yml  crow.g.py  jjj  make.py
crow/.bonesinger/: cmake.yml  licant.yml
crow/crow/: address.h  asyncio.h  constexpr_hexer.h  crow.h  defs.h  functional.h  gateway.h  hexer.h  hostaddr.h  hostaddr_view.h  keepalive.h  nodeaddr.h  packet.h  packet_ptr.h  print.h  qosbyte.h  tower.h  warn.h
crow/doxygen/: Doxyfile
crow/system/: crowker.service  install.sh
crow/tests/: address.cpp  keepalive.cpp  main.cpp  make.py  msgbox.cpp  node.cpp  nos_adaptor.cpp  packet_serialization.cpp  self_gstuff.cpp  spammer.cpp  start-stop.cpp  subscriber_node.cpp  test0.cpp
crow/tools/: cmake-android.sh  make-dist.sh  reformat.sh
dataproxy/: .gitignore  BRANCH.md  CMakeLists.txt  make.py
dataproxy/src/: NetworkAnalyzer.h  buffered_channels.cpp  buffered_channels.h  main.cpp  main.h  signal-analyzer-harvest.cpp  version.h
igris/: .clang-format  .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  README.md  azure-pipelines.yml  buffer.h  dprint.h  halfer.h  igris.g.py  make.py  object_time.h  result.h  sclonner.h
igris/.bonesinger/: cmake.yml  licant-with-docker.yml  licant.yml
igris/container/: cyclic_buffer.h  dlist.cpp  dualmap.h  sline.h  span.h  std_portable.h  tensor.h  vector.h  vector2.h
igris/datastruct/: bit.h  bitmap.h  hashtable.h  iovec_ops.h  pool.h  ring_counter.h  stable.h  stimer.h  trent.h
igris/defs/: ascii.h  vt100.h
igris/doxygen/: Doxyfile
igris/dprint/: dprint_stdout.c
igris/event/: delegate.h
igris/getopt/: cliopts.h
igris/igris/: binreader.h  compiler.h  creader.h  displace.h  dtrace.h  getopt.h  halfer.cpp  iovec.h  limits.h  math.h  object_time.h  osutil.h  sclonner.cpp  sclonner.h  stopable_thread.h  tuple.h
igris/math/: convertors.h  defs.h  fast_invsqrt.h
igris/osutil/: realtime.h  timeouted_read.h
igris/path/: directory.h  path.h  path_windows.cpp
igris/serialize/: archive.h  scpi.h  serialize.h  serialize_scheme.h  serializer.h  stdtypes.h
igris/series/: block.cpp  fiber.h  field_annotation.cpp  field_annotation.h  field_annotator.h  series.cpp  series.h
igris/shell/: callable_collection.h  conscmd.h  readline.h  vterm.h
igris/string/: memmem.c  random_string.h
igris/sync/: critical_context.c  critical_context.h  mutex.cpp  semaphore.cpp  semaphore.h  spinlock.h
igris/tests/: ab_converter.cpp  argvc.hpp  bits.cpp  buffer.cpp  chunked_vector.hpp  cliopts.cpp  crc.cpp  dprint.hpp  event.hpp  gstuff.cpp  igris_string.cpp  lin_malloc_env.cpp  lin_malloc_tests.cpp  mutex.cpp  mutex_cooperative.cpp  ndarray.cpp  pathops.cpp  printf.cpp  readlinexx.cpp  safe_queue.cpp  sem.cpp  semaphore_cooperative.cpp  signature.hpp  sline.cpp  subprocess.cpp  sync.hpp  tensor.cpp  timer_manager.cpp  util.hpp  vector.cpp
igris/time/: arduino_systime_compatible.h  simple_timer_manager.h  stopwatch.h
igris/tools/: cmake_android.sh  pre-commit  upload-docker.sh
igris/types-generic/: limits.h  off_t.h
igris/util/: __include_string_view.h  access.h  base64.h  bits.h  bitscopy.h  bug.h  bug_abort.c  crc.c  crc.h  ctrdtr.h  ctype.h  hexascii.h  macro.h  memberxx.h  numconvert.c  numconvert.h  pathops.h  printf_impl.h  size_incrementor.h  string.h  stub.c
ircc/: .gitignore  CMakeLists.txt  LICENSE.md  README.md
ircc/example/: CMakeLists.txt  main.cpp  resources.txt
ircc/src/: ircc.h  main.cpp
ircc/test/: CMakeLists.txt  build.sh  foo.txt  main.c  main.cpp  resources.txt
nos/: .clang-format  .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml  make.py  nos.g.py
nos/.bonesinger/: cmake.yml  licant.yml
nos/doxygen/: Doxyfile  Doxyfile.bak
nos/nos/: argparse.cpp  argparse.h  buffer.h  cancel.h  check.h  fault.h  fprint.h  ilist.h  input.h  log.h  meta.h  print.h  reflect.h  terminal.h  timestamp.h  to_string.h  trace.h  translator.h
nos/tests/: argparse.cpp  check.cpp  circular_rectangle.cpp  fprint.cpp  hex.cpp  input.cpp  iprint.cpp  json.cpp  log.cpp  main.cpp  null_ostream.cpp  pbjson.cpp  print.cpp  rpc.cpp  serialize.cpp  serialize2.cpp  shell.cpp  spec.cpp  tcp_client_timeout.cpp  tcp_spam_server.cpp  timeouted_read.cpp  to_string.cpp  trace.cpp  trent.cpp  weaked_function.cpp
nos/tools/: cmake-android.sh  dist-tests.sh  expected.cpp  install.sh  make-dist.sh  upload-docker.sh
rabbit/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml  make.py  rabbit.g.py
rabbit/.bonesinger/: cmake.yml  licant.yml
rabbit/rabbit/: camera.h  cell3d.h  curve2.h  gparams.h  inctest.cpp  intersect.c  intersect.cpp  intersect.h  interval.h  mesh.cpp  prim2.h  space.h  types.h  util.h
rabbit/tests/: intersect.cpp  line2.cpp  make.py  nearest.cpp  optimize.cpp  reactphysics3d.cpp  svd.cpp
ralgo/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  azure-pipelines.yml  make.py  ralgo.g.py
ralgo/.bonesinger/: cmake.yml  licant.yml
ralgo/doxygen/: Doxyfile
ralgo/ralgo/: binary_hypercube.h  boundary_box.h  cartesian_grid.h  defs.h  disctime-chrono-millis.cpp  disctime.h  freq_invoke_imitation.h  global_protection.cpp  global_protection.h  linspace.h  lintrans.h  log.h
rfdaemon/: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  applist.json  azure-pipelines-1.yml  make.py  resources.txt  scat.txt
rfmeask/: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CorrectionTable.json  OneAxisCorrection.json  README.md  azure-pipelines.yml  cncsim_tandem-runtime.json  cncsim_tandem-settings.json  ircc_resources.gen.cpp  make.py  resources.txt
(+4363 files in other folders)
